package br.dev.zancanela.sudoku.domain.enums;

public enum JogoEventEnum {
    ADICIONAR_ERRO_AO_JOGO,
    TOGGLE_MODO_RASCUNHO,
    JOGO_LIMPO,
    JOGO_MODIFICADO
}